<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            style="@style/MainText"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/settings_general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swHideAds"
            style="@style/MainText"
            android:padding="24dp"
            android:textSize="18sp"
            android:text="@string/hide_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <global.msnthrp.feeed.views.Stepper
            android:id="@+id/stColumns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/columns_in_feed"
            app:min="3"
            app:max="5"/>

</LinearLayout>