<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/llBottomSheet"
              app:behavior_hideable="true"
              app:behavior_peekHeight="0dp"
              android:focusable="true"
              android:clickable="true"
              android:background="@color/background"
              app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            style="@style/MainText"
            android:textStyle="bold"
            android:text="@string/share_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:id="@+id/llShareImageInMessage"
            android:background="?selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_margin="16dp"
                android:src="@drawable/ic_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:textSize="18sp"
                style="@style/MainText"
                android:text="@string/send_in_message"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/llShareImageViaOther"
            android:background="?selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_margin="16dp"
                android:src="@drawable/ic_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:textSize="18sp"
                style="@style/MainText"
                android:text="@string/share_via_other_app"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:textSize="16sp"
            style="@style/MainText"
            android:text="@string/share_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:id="@+id/llSharePostInMessage"
            android:background="?selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_margin="16dp"
                android:src="@drawable/ic_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:textSize="18sp"
                style="@style/MainText"
                android:text="@string/send_in_message"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:layout_marginBottom="24dp"
            android:id="@+id/llSharePostViaOther"
            android:background="?selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_margin="16dp"
                android:src="@drawable/ic_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:textSize="18sp"
                style="@style/MainText"
                android:text="@string/share_via_other_app"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>